FINT-52-46 Fix cleanup frequency and test setup